Chart updating upon CMP PE and MarketCap

--- a/public/companies.html
+++ b/public/companies.html
@@ -16,8 +16,9 @@
 
     <div class="container">
       <div class="row">
-        <div id="chart-area" class="col-sm"></div>
-        <div id="chart-data" class="col-sm"></div>
+        <div id="chart-area">
+          <svg></svg>
+        </div>
       </div>
     </div>
   </body>
