Add time slot slider

--- a/public/equity.html
+++ b/public/equity.html
@@ -7,14 +7,21 @@
     <title>Buildings</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/equity.css" />
+    <script src="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <link
+      href="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <script src="js/lodash.min.js"></script>
     <script src="js/d3.v5.min.js"></script>
     <script src="js/equity.js"></script>
-
     <div class="container">
+      <div id="range-label"></div>
+      <div id="slider-container"></div>
       <div class="row">
         <div id="chart-area" class="col-sm">
           <svg></svg>
